--- a/mobile/templates/mobile/cart.html
+++ b/mobile/templates/mobile/cart.html
@@ -6,14 +6,16 @@
 <h1>YOUR CART ITEMS</h1>
 <table class="table table-striped">
     <tr>
+        <td>Image</td>
         <td>Product name</td>
         <td>Price</td>
         <td>Status</td>
     </tr>
     {% for order in orders%}
     <tr>
+        <td><img src="{{order.product.img.url}}" height="100px"></td>
         <td>{{order.product}}</td>
-        <td>{{order.price}}</td>
+        <td>{{order.product.price}}</td>
         <td>{{order.status}}</td>
         <td><a href="{%url 'cartcancel' order.id%}">cancel</a></td>
         <td><a href="{%url 'cartview' order.product%}">view</a></td>
